# hedwig

./: .gitignore  AGENTS.md  README.md  config.example.toml  flake.nix
dev/: Dockerfile.dev  config.toml  docker-compose.yml  generate-certs.sh
dev/certs/: dkim-private.pem  mailpit-key.pem  mailpit.pem  rootCA.pem  server-key.pem  server.pem
docs/: CONFIGURATION.md  PLUGINS.md
examples/plugins/: README.md
examples/plugins/domain-filter/: README.md  config.example.toml  go.mod  main.go
examples/plugins/logger/: Cargo.toml
examples/plugins/logger/src/: lib.rs
smtp-server/: Cargo.toml
smtp-server/src/: callbacks.rs  config.rs  main.rs
smtp-server/src/plugins/: config.rs  host_functions.rs  manager.rs  mod.rs  plugin.rs  types.rs
smtp-server/src/storage/: fs_storage.rs  mod.rs
smtp-server/src/worker/: deferred_worker.rs  mod.rs
