[package]
name = "hedwig"
version = "0.5.1"
edition = "2021"

[dependencies]
smtp = { path = "../smtp" }
miette = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mail-parser = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
camino = "1.1.9"
ulid = "1.1.3"
config = { version = "0.14.0", default-features = false, features = [
    "async",
    "toml",
    "json",
] }
huml-rs = "0.1.0"
async-channel = "2.3.1"
futures = "0.3.30"
async-stream = "0.3.6"
email-address-parser = "2.0.0"
hickory-resolver = "0.24.1"
mail-send = "0.4.9"
tokio-rustls = { version = "0.26.0", features = [
    "ring",
], default-features = false }
subtle = "2.6.1"
tempfile = "3.13.0"
pkcs8 = "0.10.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-serde = "0.2"
lettre = { version = "0.11.11", features = [
    "smtp-transport",
    "pool",
    "rustls-tls",
    "dkim",
    "tokio1",
    "tokio1-rustls-tls",
    "builder",
    "hostname",
], default-features = false }
mail-auth = "0.6.0"
moka = { version = "0.12.10", features = ["future"] }
tokio-util = { version = "0.7.13", features = ["io"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
rustls-pemfile = "2.2.0"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
rsa = "0.9"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pem = "3"
memchr = "2.7.4"
mailparse = "0.16.1"
humantime-serde = "1.1"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.19.0"
prometheus = "0.13"
extism = "1"

[dev-dependencies]
toml = "0.8"
