[package]
name = "hedwig-plugin-logger"
version = "0.1.0"
edition = "2021"
description = "Example logger plugin for Hedwig SMTP server"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
